--- a/Fine-Tune/fine-tune.ipynb
+++ b/Fine-Tune/fine-tune.ipynb
@@ -1,37 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# MITRE ATT&CK Log Classifier - Fine-Tuning Notebook\n",
-    "\n",
-    "## Key Improvements:\n",
-    "\n",
-    "### 🚀 Dynamic Padding (Major Optimization!)\n",
-    "- **MAX_LENGTH = 16384**: Only for truncation limit (safety)\n",
-    "- **Actual padding**: Each batch pads to its **longest example**, not MAX_LENGTH\n",
-    "- **Benefits**: \n",
-    "  - If your data averages 3000 tokens but max is 12000, you save ~75% computation!\n",
-    "  - No wasted GPU memory on padding tokens\n",
-    "  - Faster training (only process actual content)\n",
-    "  \n",
-    "### 📊 Training Configuration:\n",
-    "- **Model**: Qwen2.5-1.5B-Instruct\n",
-    "- **LoRA**: r=32, alpha=64 (better capacity)\n",
-    "- **Epochs**: 5 (improved from 2)\n",
-    "- **Learning Rate**: 2e-4 with cosine schedule\n",
-    "- **Early Stopping**: Prevents overfitting\n",
-    "- **Estimated Time**: ~6-8 hours on Kaggle T4\n",
-    "\n",
-    "### 💡 How It Works:\n",
-    "1. MAX_LENGTH truncates extremely long inputs (safety limit)\n",
-    "2. DataCollator pads each batch to its longest sequence\n",
-    "3. Example: Batch with [500, 1200, 800] tokens → pads to 1200, not 16384\n",
-    "4. Saves massive amounts of computation!"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -121,22 +90,24 @@
     "TRAIN_FILE = f\"{DATA_PATH}/train.jsonl\"\n",
     "VAL_FILE = f\"{DATA_PATH}/val.jsonl\"\n",
     "\n",
-    "# Training settings - UPDATED for full input support with DYNAMIC PADDING\n",
-    "MAX_LENGTH = 16384       # Maximum length for truncation only (not padding!)\n",
-    "                         # Using 16384 to handle even larger inputs than measured\n",
+    "# Training settings - OPTIMIZED for 7-log chunks with DYNAMIC PADDING\n",
+    "MAX_LENGTH = 4096        # Optimized for 7-log chunks (~2,200 tokens + instruction = ~3,000 total)\n",
+    "                         # Maximum length for truncation only (not padding!)\n",
     "                         # Each batch will pad to its longest example (not MAX_LENGTH)\n",
-    "BATCH_SIZE = 1\n",
-    "GRAD_ACCUM_STEPS = 16    # Increased from 8 to compensate for larger sequences\n",
+    "BATCH_SIZE = 4           # Increased from 1 (7-log chunks are much smaller!)\n",
+    "GRAD_ACCUM_STEPS = 4     # Reduced from 16 (effective batch = 4 * 4 = 16)\n",
     "NUM_EPOCHS = 5           # Increased from 2 for better learning\n",
-    "LEARNING_RATE = 2e-4\n",
+    "LEARNING_RATE = 3e-4     # Slightly higher for better convergence with larger batches\n",
     "\n",
     "print(\"✅ Configuration loaded (Kaggle)\")\n",
     "print(f\"   Model: {MODEL_NAME}\")\n",
-    "print(f\"   MAX_LENGTH: {MAX_LENGTH} tokens (truncation limit only)\")\n",
+    "print(f\"   MAX_LENGTH: {MAX_LENGTH} tokens (optimized for 7-log chunks)\")\n",
+    "print(f\"   Batch size: {BATCH_SIZE} (increased for smaller chunks!)\")\n",
+    "print(f\"   Effective batch: {BATCH_SIZE * GRAD_ACCUM_STEPS}\")\n",
     "print(f\"   Dynamic padding: Each batch pads to its longest example\")\n",
     "print(f\"   Epochs: {NUM_EPOCHS}\")\n",
     "print(f\"   LoRA: r=32, alpha=64 (increased capacity)\")\n",
-    "print(f\"   Estimated time: ~6-8 hours (longer due to increased sequence length)\")"
+    "print(f\"   Estimated time: ~3-4 hours (faster with optimized batch size!)\")"
    ]
   },
   {
@@ -375,8 +346,29 @@
     "        padding=False  # NO padding here! DataCollator will pad each batch dynamically\n",
     "    )\n",
     "\n",
-    "    # Add labels (same as input_ids for causal LM)\n",
-    "    tokenized[\"labels\"] = tokenized[\"input_ids\"].copy()\n",
+    "    # CRITICAL: Mask instruction/input in labels - only compute loss on Response!\n",
+    "    # This makes the model focus on learning to generate good responses\n",
+    "    labels = []\n",
+    "    for i, (text, input_ids) in enumerate(zip(texts, tokenized['input_ids'])):\n",
+    "        # Find where \"### Response:\" starts\n",
+    "        response_marker = \"### Response:\"\n",
+    "        response_start = text.find(response_marker)\n",
+    "        \n",
+    "        if response_start != -1:\n",
+    "            # Tokenize up to response marker to find the position\n",
+    "            text_before_response = text[:response_start + len(response_marker)]\n",
+    "            tokens_before = tokenizer(text_before_response, add_special_tokens=False)['input_ids']\n",
+    "            response_token_start = len(tokens_before)\n",
+    "            \n",
+    "            # Create label with masking (-100 = ignore in loss computation)\n",
+    "            label = [-100] * response_token_start + input_ids[response_token_start:]\n",
+    "        else:\n",
+    "            # Fallback: use all tokens if marker not found\n",
+    "            label = input_ids.copy()\n",
+    "        \n",
+    "        labels.append(label)\n",
+    "    \n",
+    "    tokenized[\"labels\"] = labels\n",
     "\n",
     "    return tokenized\n",
     "\n",
@@ -407,40 +399,46 @@
     "training_args = TrainingArguments(\n",
     "    output_dir=OUTPUT_DIR,\n",
     "    num_train_epochs=NUM_EPOCHS,\n",
-    "    per_device_train_batch_size=1,              # Keep at 1 for memory with 8192 tokens\n",
-    "    per_device_eval_batch_size=1,               # Keep at 1 for memory\n",
-    "    gradient_accumulation_steps=GRAD_ACCUM_STEPS,  # 16 for full input support\n",
+    "    per_device_train_batch_size=BATCH_SIZE,     # Optimized for 7-log chunks (~3000 tokens)\n",
+    "    per_device_eval_batch_size=BATCH_SIZE,      # Match training batch size\n",
+    "    gradient_accumulation_steps=GRAD_ACCUM_STEPS,  # Effective batch = 4 * 4 = 16\n",
     "    learning_rate=LEARNING_RATE,\n",
     "    fp16=True,\n",
-    "    logging_steps=50,\n",
+    "    logging_steps=25,                           # More frequent logging\n",
     "    eval_strategy=\"steps\",\n",
-    "    eval_steps=250,                             # Evaluate more frequently (every 250 steps)\n",
+    "    eval_steps=100,                             # Evaluate more frequently (every 100 steps)\n",
     "    save_strategy=\"steps\",\n",
-    "    save_steps=500,\n",
+    "    save_steps=200,                             # Save more frequently\n",
     "    save_total_limit=3,                         # Keep 3 best checkpoints\n",
     "    load_best_model_at_end=True,\n",
     "    metric_for_best_model=\"eval_loss\",\n",
     "    greater_is_better=False,                    # Lower loss is better\n",
-    "    warmup_steps=100,\n",
-    "    warmup_ratio=0.05,                          # 5% warmup\n",
-    "    weight_decay=0.01,                          # Add weight decay for regularization\n",
+    "    warmup_ratio=0.1,                           # 10% warmup for better stability\n",
+    "    weight_decay=0.01,                          # Weight decay for regularization\n",
     "    max_grad_norm=1.0,                          # Gradient clipping\n",
     "    optim=\"adamw_torch\",\n",
+    "    adam_beta1=0.9,                             # AdamW beta1\n",
+    "    adam_beta2=0.999,                           # AdamW beta2\n",
+    "    adam_epsilon=1e-8,                          # AdamW epsilon\n",
     "    lr_scheduler_type=\"cosine\",                 # Cosine learning rate schedule\n",
+    "    label_smoothing_factor=0.1,                 # Label smoothing for better generalization\n",
     "    report_to=\"none\",\n",
     "    gradient_checkpointing=True,\n",
     "    gradient_checkpointing_kwargs={\"use_reentrant\": False},\n",
     "    logging_first_step=True,\n",
     "    logging_nan_inf_filter=True,\n",
+    "    dataloader_num_workers=2,                   # Parallel data loading\n",
+    "    dataloader_pin_memory=True,                 # Faster GPU transfer\n",
     ")\n",
     "\n",
     "print(\"✅ Training arguments configured\")\n",
-    "print(f\"   Batch size: 1 (for 8192 token sequences)\")\n",
-    "print(f\"   Effective batch size: {1 * GRAD_ACCUM_STEPS}\")\n",
-    "print(f\"   Total steps: ~{len(tokenized_dataset['train']) // (1 * GRAD_ACCUM_STEPS) * NUM_EPOCHS}\")\n",
-    "print(f\"   Learning rate: {LEARNING_RATE} (cosine schedule)\")\n",
-    "print(f\"   Weight decay: 0.01 (for regularization)\")\n",
-    "print(f\"   Eval frequency: every 250 steps\")"
+    "print(f\"   Batch size: {BATCH_SIZE} per device (optimized for 7-log chunks)\")\n",
+    "print(f\"   Effective batch size: {BATCH_SIZE * GRAD_ACCUM_STEPS}\")\n",
+    "print(f\"   Total steps: ~{len(tokenized_dataset['train']) // (BATCH_SIZE * GRAD_ACCUM_STEPS) * NUM_EPOCHS}\")\n",
+    "print(f\"   Learning rate: {LEARNING_RATE} (cosine schedule with 10% warmup)\")\n",
+    "print(f\"   Weight decay: 0.01, Label smoothing: 0.1\")\n",
+    "print(f\"   Eval frequency: every 100 steps (more frequent monitoring)\")\n",
+    "print(f\"   🎯 Loss computed ONLY on Response (instruction/input masked)\")"
    ]
   },
   {
@@ -468,8 +466,8 @@
     "\n",
     "# Add early stopping to prevent overfitting\n",
     "early_stopping = EarlyStoppingCallback(\n",
-    "    early_stopping_patience=3,  # Stop if no improvement for 3 evals\n",
-    "    early_stopping_threshold=0.01  # Minimum improvement threshold\n",
+    "    early_stopping_patience=5,  # Stop if no improvement for 5 evals (more patience)\n",
+    "    early_stopping_threshold=0.005  # Smaller threshold for finer control\n",
     ")\n",
     "\n",
     "trainer = Trainer(\n",
@@ -482,9 +480,12 @@
     ")\n",
     "\n",
     "print(\"✅ Trainer created with early stopping\")\n",
-    "print(f\"   Early stopping patience: 3 evaluations\")\n",
-    "print(f\"   Will stop if loss doesn't improve by 0.01\")\n",
-    "print(f\"📊 GPU Memory: {torch.cuda.memory_allocated() / 1024**3:.2f} GB / 15 GB\")\n"
+    "print(f\"   Early stopping patience: 5 evaluations\")\n",
+    "print(f\"   Will stop if loss doesn't improve by 0.005\")\n",
+    "print(f\"   Label smoothing: 0.1 (better generalization)\")\n",
+    "print(f\"   Response-only loss: Ignores instruction/input tokens\")\n",
+    "\n",
+    "print(f\"📊 GPU Memory: {torch.cuda.memory_allocated() / 1024**3:.2f} GB / 15 GB\")"
    ]
   },
   {
@@ -495,12 +496,17 @@
    "source": [
     "# Cell 11: Start training with progress tracking\n",
     "print(\"\\n🚀 Starting training...\\n\")\n",
-    "print(\"💡 TRAINING WITH:\")\n",
-    "print(f\"   MAX_LENGTH: {MAX_LENGTH} tokens (full input support)\")\n",
+    "print(\"💡 OPTIMIZED TRAINING CONFIGURATION:\")\n",
+    "print(f\"   Data: 7-log chunks (~2,200 tokens each)\")\n",
+    "print(f\"   MAX_LENGTH: {MAX_LENGTH} tokens (plenty of headroom)\")\n",
+    "print(f\"   Batch size: {BATCH_SIZE} (4x faster than before!)\")\n",
+    "print(f\"   Effective batch: {BATCH_SIZE * GRAD_ACCUM_STEPS}\")\n",
     "print(f\"   NUM_EPOCHS: {NUM_EPOCHS}\")\n",
-    "print(f\"   LoRA r={32}, alpha={64}\")\n",
+    "print(f\"   LoRA: r={32}, alpha={64}\")\n",
     "print(f\"   Learning rate: {LEARNING_RATE} with cosine schedule\")\n",
-    "print(f\"\\n⏱️ This will take ~6-8 hours...\\n\")\n",
+    "print(f\"   Label smoothing: 0.1 (better generalization)\")\n",
+    "print(f\"   🎯 Response-only loss (ignores instruction/input)\")\n",
+    "print(f\"\\n⏱️ Estimated time: ~3-4 hours (faster with optimized batching!)\\n\")\n",
     "print(\"=\"*80)\n",
     "\n",
     "import time\n",
